fix(panelbar): prevent margins in panelbar content from collapsing

--- a/packages/default/scss/panelbar/_layout.scss
+++ b/packages/default/scss/panelbar/_layout.scss
@@ -78,6 +78,12 @@
         }
 
 
+        // Panelbar content
+        .k-content {
+            display: flow-root;
+        }
+
+
         // Toggle icon
         .k-panelbar-expand,
         .k-panelbar-collapse {
